<resources>
    <string name="app_name">Akrar</string>
    <string name="text_title">هناك حقيقة مثبتة منذ زمن طويل وهى ان المحتوى المقروء لصفحة ما سيلهى القارئ</string>

    <string name="types_pay">كاش</string>
    <string-array name="pays_arrays">
        <item>كاش</item>
        <item>اجل</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invoice_from">سند قبض من %1$s</string>
    <string name="invoice_to">سند قبض الى %1$s</string>
    <string name="productName"> اسم المنتج: %1$s</string>
    <string name="amount"> الكمية: %1$s</string>
    <string name="unit"> الوحدة: %1$s</string>
    <string name="price"> السعر: %1$s</string>
    <string name="product_number"> المنتج رقم: %1$d</string>

    <string name="payment_number"> تاريخ: %1$d</string>
    <string name="payment_number_text"> تاريخ: %1$s</string>

    <string name="paymentName"> القيمة: %1$s</string>

    <string name="paymentpaid"> القيمةالمدفوعة: %1$s</string>
    <string name="paymentrest"> الباقي: %1$s</string>

    //FCM
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


</resources>
