<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_frame_rectange"
    android:orientation="vertical">

    <ToggleButton
        android:id="@+id/product_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/collapsing_list_bg_selector"
        android:checked="true"
        android:gravity="right|center_vertical"
        android:textOff="@string/product_number"
        android:textOn="@string/product_number" />

    <LinearLayout
        android:id="@+id/product_sub_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            android:text="@string/productName" />

        <TextView
            android:id="@+id/amount_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            tools:text="@string/amount" />

        <TextView
            android:id="@+id/unit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            tools:text="@string/unit" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            tools:text="@string/price" />


    </LinearLayout>


</LinearLayout>
