<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_frame_rectange"
    android:orientation="vertical">

    <ToggleButton
        android:id="@+id/product_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/collapsing_list_bg_selector"
        android:checked="true"
        android:gravity="right|center_vertical"
        android:textOff="@string/payment_number"
        android:textOn="@string/payment_number" />

    <LinearLayout
        android:id="@+id/product_sub_layout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            android:text="@string/paymentName" />

        <TextView
            android:id="@+id/amount_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            tools:text="@string/paymentpaid" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="right"
            tools:text="@string/paymentrest" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="0dp"
                    android:text="دفع جزء من القيمة"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <Space
                    android:layout_width="90dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="0dp"
                    android:text="تاكيد الاستلام "
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>